--- a/builds/odoo_data/Dockerfile
+++ b/builds/odoo_data/Dockerfile
@@ -2,8 +2,8 @@
 FROM alpine:3.4
 MAINTAINER edisaac S.A. <edisaac.mejia@gmail.com>
 
-# Volumes used by Odoo; permissions are set when executing `launch`
-VOLUME ["/var/lib/odoo"]
-  
+ENV ODOO_DATA /mnt/data
+VOLUME [${ODOO_DATA}]
+ 
 # This container will be stopped, since we only need it to hold volume data
-CMD ["/usr/bin/true"]
+CMD ["/bin/true"]
