--- a/compose/odoo/docker-compose.yml
+++ b/compose/odoo/docker-compose.yml
@@ -1,82 +1,27 @@
 # Odoo server itself
 app:
-    image: yajo/odoo:8.0
+    image: edisaac/odoo:8.0
     # Allow colorized output
     tty: true
-    environment:
-        # Default values (you **must** change ADMIN_PASSWORD)
-        ADMIN_PASSWORD: admin
-        PGDATABASE: odoo
-        PGUSER: odoo
-        PGPASSWORD: odoo
-        PGDATABASE: odoo
-        PGHOST: db
-        ODOO_SERVER: odoo.py
-        UNACCENT: 1
-        WDB_NO_BROWSER_AUTO_OPEN: 1
-        WDB_SOCKET_SERVER: wdb
-        WDB_WEB_PORT: 1984
-        WDB_WEB_SERVER: localhost
     # If you are going to use the HTTPS proxy for production,
     # don't expose any ports
     ports:
         - "8069:8069"
         - "8072:8072"
-    volumes:
-        # Assuming you have an addons subfolder in the working tree
-        - ./addons:/opt/odoo/extra-addons:ro,Z
-    volumes_from:
-        - appdata
+    # Code is in local for development    
+    volumes:        
+        - /mnt/DISCO_F/git/cubic:/etc/odoo
+        - /mnt/DISCO_F/git/odoo_adoons:/mnt/extra-addons
+        - /mnt/DISCO_F/docker_mount/odoo:/var/lib/odoo
+
     links:
-        - db
-        - wdb # Debugger, only for development
-    # This is the default command
-    command: launch
-
-# Hold separately the volumes of Odoo variable data
-appdata:
-    image: yajo/odoo:data
-
+        - db 
+    command:
+        - "-d Test01 -u open_academy"
 # PostgreSQL server
 db:
-    image: postgres:9.2
+    image: postgres:9.4-alpine
     environment:
         # You **must** change these
         POSTGRES_USER: odoo
         POSTGRES_PASSWORD: odoo
-    volumes_from:
-        - dbdata
-
-# PostgreSQL data files
-dbdata:
-    image: postgres:9.2
-    command: "true"
-
-# For development, add a debugger
-wdb:
-    image: yajo/wdb-server
-    ports:
-        - "1984:1984"
-
-# For production, you will need HTTPS
-https:
-    image: yajo/https-proxy
-    ports:
-        - "80:80"
-        - "443:443"
-    links:
-        - app:www
-    environment:
-        PORT: 8069
-        # In case you have your SSL key & certs, put them here:
-        KEY: |
-            -----BEGIN PRIVATE KEY-----
-            [some random base64 garbage]
-            -----END PRIVATE KEY-----
-        CERT: |
-            -----BEGIN CERTIFICATE-----
-            [some random base64 garbage]
-            -----END CERTIFICATE-----
-            -----BEGIN CERTIFICATE-----
-            [you will probably have more of these sections]
-            -----END CERTIFICATE-----
